<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#800000"
    android:paddingStart="5dp"
    android:paddingEnd="5dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="130dp"
        android:text="@string/titulo"
        android:textColor="#FFFAF0"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnBuscar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="56dp"
        android:backgroundTint="#FFD700"
        android:onClick="onClick"
        android:text="@string/seach"
        android:textColor="@color/material_dynamic_neutral10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTitulo" />

    <EditText
        android:id="@+id/editIDBuscar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="22dp"
        android:drawableStart="@android:drawable/ic_menu_search"
        android:ems="10"
        android:hint="@string/id"
        android:inputType="number"
        android:maxLength="4"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:textColorHint="#B0B0B0"
        app:layout_constraintEnd_toStartOf="@+id/btnBuscar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTitulo" />

    <EditText
        android:id="@+id/editNombre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="text"
        android:maxLength="15"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:textColorHint="#B0B0B0"
        app:layout_constraintEnd_toStartOf="@+id/autoCompleteTipo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editIDBuscar" />

    <EditText
        android:id="@+id/editAnio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:hint="@string/year"
        android:inputType="number"
        android:maxLength="4"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:textColorHint="#B0B0B0"
        app:layout_constraintEnd_toStartOf="@+id/editAltura"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editNombre" />

    <EditText
        android:id="@+id/editAltura"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="@string/height"
        android:inputType="numberDecimal"
        android:maxLength="4"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:textAlignment="center"
        android:textColorHint="#B0B0B0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/autoCompleteTipo" />

    <EditText
        android:id="@+id/editId"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:drawableStart="@android:drawable/ic_lock_lock"
        android:ems="10"
        android:hint="@string/id"
        android:inputType="number"
        android:maxLength="4"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:textColorHint="#B0B0B0"
        app:layout_constraintEnd_toStartOf="@+id/editGasolina"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editAnio" />

    <EditText
        android:id="@+id/editGasolina"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="@string/gasoline"
        android:inputType="numberDecimal"
        android:maxLength="4"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:textAlignment="center"
        android:textColorHint="#B0B0B0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editAltura" />

    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="80dp"
        android:backgroundTint="@color/white"
        android:onClick="onClick"
        android:text="@string/add"
        android:textColor="@color/material_dynamic_neutral10"
        app:layout_constraintEnd_toStartOf="@+id/btnLimpiar"
        app:layout_constraintHorizontal_bias="0.178"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPrecio" />

    <Button
        android:id="@+id/btnLimpiar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="60dp"
        android:backgroundTint="@color/white"
        android:onClick="onClick"
        android:text="@string/clean"
        android:textColor="@color/material_dynamic_neutral10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPrecio" />

    <EditText
        android:id="@+id/editPrecio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="@string/price"
        android:inputType="numberDecimal"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:textColorHint="#B0B0B0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editDescripcion" />

    <EditText
        android:id="@+id/editDescripcion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:drawableStart="@android:drawable/stat_notify_chat"
        android:drawablePadding="10dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/descripcion"
        android:inputType="textMultiLine"
        android:maxLength="30"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:textColorHint="#B0B0B0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editGasolina" />

    <AutoCompleteTextView
        android:id="@+id/autoCompleteTipo"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/type"
        android:textColorHint="#B0B0B0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBuscar" />

</androidx.constraintlayout.widget.ConstraintLayout>